# goit-pythonweb-hw-12

./: .dockerignore  .env.example  .gitignore  docker-compose.yml  main.py  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 7ad43030187f_initial_migration.py
app/: config.py  main.py
app/database/: __init__.py  crud.py  db.py  models.py  schemas.py
app/routes/: auth.py  contacts.py  users.py
app/services/: auth.py  email.py  utils.py
docs/: conf.py  index.rst
docs/source/: app.database.rst  conf.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: database.py  models.py
src/repository/: contacts.py  user.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  limiter.py  redis_cache.py  upload_file.py  users.py
src/services/templates/: reset_password.html  verify_email.html
tests/: conftest.py  test_contact_repository_unit.py  test_integration_auth.py  test_integration_contacts.py  test_integration_users.py  test_integration_utils.py  test_user_repository_unit.py
tests/test_database/: test_db.py
tests/test_routes/: test_auth.py  test_avatar_upload.py  test_cache.py  test_contacts.py  test_refresh.py  test_users.py
tests/test_services/: test_email.py
